2010-01-04  Robert Millan  <rmh.grub@aybabtu.com>

	* commands/crc.c (grub_cmd_crc): Abort on read errors.
	* fs/iso9660.c (grub_iso9660_read): Check for read error and pass
	it to upper layer.

2010-01-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/api.h (GRUB_EFI_PIWG_DEVICE_PATH_SUBTYPE):
	New constant.
	(grub_efi_piwg_device_path): New structure
	(grub_efi_piwg_device_path_t): New type.
	* loader/efi/appleloader.c (piwg_full_device_path): New structure.
	(devpath_1): Transform to a structure. All users updated.
	(devpath_2): Likewise.
	(devpath_3): Likewise.
	(devpath_4): Likewise.
	(devpath_5): Likewise.

2010-01-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/efi/appleloader.c: Restored. Update all users.

2010-01-03  Robert Millan  <rmh.grub@aybabtu.com>

	* boot/i386/pc/diskboot.S: Fix inaccurate comment.

	* util/i386/pc/grub-setup.c: Include `<assert.h>'.
	(struct boot_blocklist): Move from here ...
	* include/grub/i386/pc/boot.h [ASM_FILE]
	(struct grub_boot_blocklist): ... to here.  Update all users.
	(setup): Only initialize `start' member of `first_block'
	structure.  Add assert() calls to verify the other members.

	* util/i386/pc/grub-mkimage.c: Include `<assert.h>'.
	(generate_image): Fix broken blocklist length initialization.
	Add assert() call to verify blocklist `segment' field.

2010-01-03  Robert Millan  <rmh.grub@aybabtu.com>

	* loader/efi/appleloader.c: Remove.  Update all users.

2010-01-03  Robert Millan  <rmh.grub@aybabtu.com>

	* boot/i386/pc/boot.S: Update copyright year.
	* boot/i386/pc/cdboot.S: Likewise.
	* boot/i386/pc/diskboot.S: Likewise.
	* boot/i386/pc/lnxboot.S: Likewise.
	* boot/i386/pc/pxeboot.S: Likewise.
	* bus/pci.c: Likewise.
	* commands/cmp.c: Likewise.
	* commands/help.c: Likewise.
	* commands/hexdump.c: Likewise.
	* commands/i386/pc/halt.c: Likewise.
	* commands/i386/pc/play.c: Likewise.
	* commands/i386/pc/vbeinfo.c: Likewise.
	* commands/ls.c: Likewise.
	* commands/test.c: Likewise.